----------------------------------------------------------------------
Tue Sep 17 18:08:17 2002                        Michael Jennings (mej)

Gotta watch that filename quoting with RPM's....
----------------------------------------------------------------------
Sun Sep 22 16:05:11 2002                        Michael Jennings (mej)

Fixes for spec file handling in merges/imports of SRPM's.
----------------------------------------------------------------------
Thu Apr 10 15:07:54 2003                        Michael Jennings (mej)

Fixes to spec file handling.
----------------------------------------------------------------------
Mon May 12 11:05:07 2003                        Michael Jennings (mej)

Fixed retry algorithm.
----------------------------------------------------------------------
Mon Jun  2 14:15:55 2003                        Michael Jennings (mej)

Don't bitch about symlinks that are already there.
----------------------------------------------------------------------
Mon Jun  2 14:17:26 2003                        Michael Jennings (mej)

Make sure apt is present and working, and remove old symlinks rather
than failing.
----------------------------------------------------------------------
Mon Jun  2 12:30:45 2003                        Michael Jennings (mej)

Don't commit right away, just add/remove stuff.
----------------------------------------------------------------------
Mon Jun  2 14:42:30 2003                        Michael Jennings (mej)

Working on fixing uptool to not nuke packages of other architectures
than the current one.
----------------------------------------------------------------------
Mon Jun  2 14:45:28 2003                        Michael Jennings (mej)

Oops, forgot to nuke that macro.
----------------------------------------------------------------------
Mon Jun  2 14:47:13 2003                        Michael Jennings (mej)

Forgot a ) too.
----------------------------------------------------------------------